[package]
name = "trade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.16.0"
ic-stable-structures = "0.6.5"
serde = "1.0.213"
serde_bytes = "0.11.15"
types = { path = "../../libraries/types" }